# lemmy-plugins

./: .gitignore  .woodpecker.yml  README.md
config/: lemmy_alpha.hjson  lemmy_beta.hjson
plugins/: rust_allowed_voters.json  typescript_push_webhook.json
plugins/go_replace_words/: main.go
plugins/rust_allowed_voters/: Cargo.toml
plugins/rust_allowed_voters/src/: lib.rs
plugins/rust_lingua/: Cargo.toml
plugins/rust_lingua/src/: lib.rs
plugins/typescript_push_webhook/: package.json
plugins/typescript_push_webhook/src/: index.d.ts  index.ts
scripts/: ci-build-rust.sh
tests/: package.json  pnpm-lock.yaml  prepare.sh  run.sh
tests/src/: golang.spec.ts  post.spec.ts  rust.spec.ts  shared.ts  typescript.spec.ts
